# aith_python_backend

./: README.md  pyproject.toml
hw_1/: main.py
